# An-AI-Car-Purchasing-Consultant-

./: README.md  analysis.ipynb  app.py  main.py  new_data.csv  sales.csv
car/: README.md  pyproject.toml
car/src/car/: crew.py  main.py
car/src/car/config/: agents.yaml  tasks.yaml
dataset/: 1.CarPurchase.csv  CarBuyers.csv
pages/: 1.CarPurchase.py  1_CarPurchase.py  2.UsedCars.py  2_UsedCars.py  3.CarBuyers.py  3_CarBuyers.py  4.LoanApproval.py  4_LoanApproval.py  5.VehicleInsurance.py  5_VehicleInsurance.py  6_VehicleRepairs.py  7_CarPurchase_Recommendation.py
