[project]
name = "car"
version = "0.1.0"
description = "Car using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
car = "car.main:run"
run_crew = "car.main:run"
train = "car.main:train"
replay = "car.main:replay"
test = "car.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
